--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -12,6 +12,25 @@
 				Hier werden Daten von Routern ab Firmware 0.5.2 angezeigt.<br />
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/asdil12/fff-monitoring">hier</a>
 				heruntergeladen werden.
+				<br />
+				<br />
+				MySQL-alpha3 - New features/fixed:<br />
+				- hood statistics<br />
+				- Full API support<br />
+				- Query strings working<br />
+				- Hood layers working<br />
+				<br />
+				MySQL-alpha3 - Known issues:<br />
+				<s>- query-strings not working at all</s><br />
+				- alfred data not received continuously (see statistics)<br />
+				- User list is empty (users will be transferred at some point)<br />
+				<s>- SMTP is missing =&gt; no registration possible</s><br />
+				<br />
+				MySQL-alpha3 - ToDo:<br />
+				- copy users<br />
+				- adjust readme<br />
+				- autodelete old events<br />
+				- remove debugging output to files
 			</p></div>
 		</div>
 	</div>
