Respect case in database and code
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -67,8 +67,8 @@
 							<td class="success">{{ value["online"] or 0 }}</td>
 							<td class="danger">{{ value["offline"] or 0 }}</td>
 							<td class="warning">{{ value["unknown"] or 0 }}</td>
-							<td class="active">{{ hoods_sum[hood]["routers"] or 0 }}</td>
-							<td class="info">{{ hoods_sum[hood]["clients"] or 0 }}</td>
+							<td class="active">{{ hoods_sum[hood]["routers"] }}</td>
+							<td class="info">{{ hoods_sum[hood]["clients"] }}</td>
 							<td class="stats"><a href="{{ url_for('global_hoodstatistics', selecthood='%s' % hood) }}">Hood</a></td> 
 						</tr>
 						{%- endfor %}
