router.html: Fix long loading times
The mysql queries had been executed in a for loop, this is
moved to a single query now.

Side effect may be a little more JavaScript execution time.

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -310,6 +310,8 @@
 	</div>
 	<script type="text/javascript">
 		var router_stats = {{ router.stats|statbson2json|safe }};
+		var netif_stats = {{ netifstats|statbson2json|safe }};
+		var neigh_stats = {{ neighstats|statbson2json|safe }};
 		var neighbours = [
 		{%- for neighbour in router.neighbours %}
 			{"name": "{{ neighbour.hostname or neighbour.mac }}", "mac": "{{ neighbour.mac }}", "net_if": "{{ neighbour.net_if }}"},
