--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -65,7 +65,7 @@
 						<tr>
 							<td class="firstrow"><a href="{{ url_for('router_list', q='hood:%s' % hood.replace(' ','_')) }}">{{ hood }}</a></td>
 							<td class="success">{{ value["online"] or 0 }}</td>
-							<td class="danger">{{ value["offline"] or 0 }}</td>
+							<td class="danger">{{ value["offline"] or 0 }}{%- if value["orphaned"] %} ({{ value["orphaned"] or 0 }}){%- endif %}</td>
 							<td class="warning">{{ value["unknown"] or 0 }}</td>
 							<td class="active">{{ hoods_sum[hood]["routers"] }}</td>
 							<td class="info">{{ hoods_sum[hood]["clients"] }}</td>
