router.html: Show neighbors without associated router
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -191,7 +191,8 @@
 							</tr>
 							{%- for neighbour in router.neighbours %}
 							<tr style="background-color: {{ neighbour.quality|neighbour_color }};">
-								<td><a href="{{ url_for('router_info', dbid=neighbour.id) }}">{{ neighbour.hostname }}</a></td>
+								
+								<td>{%- if neighbour.hostname -%}<a href="{{ url_for('router_info', dbid=neighbour.id) }}">{{ neighbour.hostname }}</a>{%- else -%}---{%- endif -%}</td>
 								<td>{{ neighbour.mac }}</td>
 								<td>{{ neighbour.quality }}</td>
 								<td>{{ neighbour.net_if }}</td>
