--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,12 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/asdil12/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog</h2>
+				<h3>&Auml;nderungen am 17.11.2017</h3>
+				<ul style="font-size:18px">
+				<li>Router-Status wird schneller aktualisiert: Anzeige nach 90 Sek. (bisher 5 Min.)</li>
+				<li>Statistik wird schneller aktualisiert: Anzeige nach 3 Min. (bisher 6 Min.)</li>
+				<li>Offline-Status wird schneller aktualisiert: Offline nach 18 Min. (bisher 26 Min.)</li>
+				</ul>
 				<h3>&Auml;nderungen am 16.11.2017</h3>
 				<ul style="font-size:18px">
 				<li>Changelog wird eingeführt</li>
