routertools/router.html: Display warning for lost coordinates
Warning: This requires a change of the MySQL table 'router'

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -121,6 +121,9 @@
 							{%- if router.community %}
 							({{ router.community }})
 							{%- endif -%}
+							{%- if router.reset %}
+							<span style="color:#d90000">- Router has lost its position!</span>
+							{%- endif -%}
 						</td></tr>
 						{%- endif %}
 						{%- if router.user or router.contact %}
