--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -41,7 +41,7 @@
 		<div class="col-xs-12 col-sm-10">
 		<h2 style="margin-top: 10px;">Router: {{ router.hostname }}</h2>
 		{%- if mac %}
-		<h4 style="margin-top: 10px;margin-bottom: 20px">Perma-Link: <a href="/api/get_router_by_mac/{{ mac }}">https://monitoring.freifunk-franken.de/api/get_router_by_mac/{{ mac }}</a></h4>
+		<h4 style="margin-top: 10px;margin-bottom: 20px">Perma-Link: <a href="{{ url_for('router_mac',mac=mac) }}">https://monitoring.freifunk-franken.de{{ url_for('router_mac',mac=mac) }}</a></h4>
 		{%- endif %}
 		</div>
 		<div class="col-xs-12 col-sm-2 text-right" style="margin-top: 10px; margin-bottom: 10px;">
