--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,15 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/asdil12/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog</h2>
+				<h3>&Auml;nderungen am 10.12.2017</h3>
+				<ul style="font-size:18px">
+				<li>Perma-Link auf Router-Detailseite</li>
+				<li>Router k&ouml;nnen anhand der MAC-Adresse ihrer Nachbarn gesucht werden: <span class="consolefont">neighbor:&lt;mac_of_neighbor&gt;</span></li>
+				<li>Globale und Hood-Statistiken werden für 365 Tage erfasst</li>
+				<li>Die Suchfunktion auf der Router-&Uuml;bersichtsseite unterstützt jetzt größtenteils Regex</li>
+				<li>Bei Router-Reset wird ein Hinweis auf Detail- und Übersichtsseite angezeigt</li>
+				<li>Die Statistik-Seite wurde umgeordnet (Graphen jetzt rechts oben)</li>
+				</ul>
 				<h3>&Auml;nderungen am 17.11.2017</h3>
 				<ul style="font-size:18px">
 				<li>Router-Status wird schneller aktualisiert: Anzeige nach 90 Sek. (bisher 5 Min.)</li>
