--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -56,6 +56,7 @@
 						{# FIXME: If authorized #}
 						<li><a href="#" onclick="$('#act').val('delete'); $('#actform').submit()">Delete Router</a></li>
 						<li><a href="#" onclick="$('#act').val('ban'); $('#actform').submit()">Ban Router</a></li>
+						<li><a href="#" onclick="$('#act').val('report'); $('#actform').submit()">Report Router</a></li>
 					</ul>
 				</div>
 			</form>
