statistics.html: Filter hood when clicking sectors in pie charts
Fixes #107

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -148,6 +148,11 @@
 		var router_firmwares = {{ router_firmwares|tojson }};
 		var router_models = {{ router_models|tojson }};
 		var routers_page_url = "{{ url_for('router_list') }}";
+		var hood = "{{selecthood}}";
+		var hoodstr = "";
+		if (hood != "All Hoods") {
+			hoodstr = "hood:^" + hood.replace(/ /g, '_') + "$";
+		}
 		$(document).ready(function() {
 			global_client_graph();
 			global_router_graph();
