--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,14 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog</h2>
+				<h3>&Auml;nderungen am 20.12.2017</h3>
+				<ul style="font-size:18px">
+				<li>Router-Statistiken werden für 30 Tage erfasst</li>
+				<li>Benutzer können ihren eigenen Account selbst löschen</li>
+				<li>Login mit E-Mail-Adresse statt Username ist ab sofort möglich</li>
+				<li>Router können per Schaltfläche an Administratoren gemeldet werden, falls rechtswidrige Texte hinterlegt sind</li>
+				<li>Router können permanent aus dem Monitoring verbannt werden</li>
+				</ul>
 				<h3>&Auml;nderungen am 10.12.2017</h3>
 				<ul style="font-size:18px">
 				<li>Perma-Link auf Router-Detailseite</li>
