--- a/ffmap/web/templates/user.html
+++ b/ffmap/web/templates/user.html
@@ -48,7 +48,7 @@
 	<div class="hidden-xs col-sm-2">
 		<div class="panel panel-default">
 			<div class="panel-body" style="padding: 5px;">
-				<a href="https://de.gravatar.com/" rel="nofollow" title="&Auml;ndere dein Avatar auf gravatar.com"><img id="avatar" class="img-responsive center-block" src="{{ user.get('email', '')|gravatar_url }}&s=150" style="width: 150px; height: 150px;" /></a>
+				<a href="https://de.gravatar.com/" rel="nofollow" title="&Auml;ndere dein Avatar auf gravatar.com"><img id="avatar" alt="Avatar" class="img-responsive center-block" src="{{ user.get('email', '')|gravatar_url }}&s=150" style="width: 150px; height: 150px;" /></a>
 			</div>
 		</div>
 	</div>
