router.html: Clarify Report Router button text
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -59,7 +59,7 @@
 						{%- if authadmin %}
 						<li><a href="#" onclick="$('#act').val('ban'); $('#actform').submit()">Ban Router</a></li>
 						{%- endif %}
-						<li><a href="#" onclick="$('#act').val('report'); $('#actform').submit()">Report Router</a></li>
+						<li><a href="#" onclick="$('#act').val('report'); $('#actform').submit()">Report abusive Router</a></li>
 					</ul>
 				</div>
 			</form>
