api/alfred and router.html: Show WiFi data for netifs
This shows information about WiFi parameters (e.g. channel).

Except the Tx-Power, data is only available if a firmware with
a corresponding nodewatcher update is present (version 44).

This requires a change of the MySQL table router_netif!

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -270,6 +270,22 @@
 							<div class="col-xs-6 col-sm-6 text-right" style="text-transform: uppercase;"><h4 class="list-group-item-heading">{{ netif.mac }}</h4></div>
 						</div>
 						<div class="row">
+							<div class="col-xs-12 col-sm-12" style="padding-bottom:6px;font-size:14px">
+							{%- if netif.wlan_type -%}
+							{{netif.wlan_type}},&nbsp;
+							{%- endif -%}
+							{%- if netif.wlan_channel -%}
+							Channel: {{netif.wlan_channel}},&nbsp;
+							{%- endif -%}
+							{%- if netif.wlan_ssid -%}
+							SSID: {{netif.wlan_ssid}},&nbsp;
+							{%- endif -%}
+							{%- if netif.wlan_txpower -%}
+							Tx-Power: {{netif.wlan_txpower}}
+							{%- endif -%}
+							</div>
+						</div>
+						<div class="row">
 							<div class="col-xs-5 col-sm-5">
 								{%- if netif.ipv6_fe80_addr -%}
 								{{ netif.ipv6_fe80_addr }}
