map: Show Coordinates if not clicking on router icon
This changes the behavior if no layer is selected.

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/static/css/style.css
+++ b/ffmap/web/static/css/style.css
@@ -14,6 +14,9 @@
 .popup-headline.with-neighbours {
 	border-bottom: 1px solid lightgray;
 }
+.popup-latlng {
+	font-size:14px;
+}
 table.neighbours td {
 	padding: 0 3px;
 }
