statistics.html: Adjust design of pie charts
Minimum percentage for firmware increased to 2 per cent, for
routers increased to 3 per cent.

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/static/css/style.css
+++ b/ffmap/web/static/css/style.css
@@ -37,3 +37,11 @@ table.neighbours {
 	padding-left: 5px;
 	padding-right: 7px;
 }
+.graph-pie {
+	height: 250px;
+	width: 100%;
+}
+.graph-pie .legendLabel {
+	padding-left: 5px;
+	padding-right: 7px;
+}
