--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -130,7 +130,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">Router Firmwares @ {{ selecthood }}</div>
 				<div class="panel-body">
-					<div id="globrouterfwstat" class="graph"></div>
+					<div id="globrouterfwstat" class="graph-pie"></div>
 				</div>
 			</div>
 		</div>
@@ -138,7 +138,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">Router Models @ {{ selecthood }}</div>
 				<div class="panel-body">
-					<div id="globroutermodelsstat" class="graph"></div>
+					<div id="globroutermodelsstat" class="graph-pie"></div>
 				</div>
 			</div>
 		</div>
