--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,7 +22,16 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog</h2>
-				<h3>&Auml;nderungen am 20.12.2017</h3>
+				<h3>&Auml;nderungen bis 30.12.2017</h3>
+				<ul style="font-size:18px">
+				<li>Router-Popup in der Karte berücksichtigt aktivierte Layer</li>
+				<li>Verwaiste (orphaned) Router werden in der Statistik berücksichtigt</li>
+				<li>Für die WLAN-Interfaces werden zusätzliche Informationen (Kanal, SSID, Typ) angezeigt; diese Funktion benötigt ein Firmware-Update des Routers</li>
+				<li>Tx-Power für die WLAN-Interfaces wird angezeigt (Antennen werden so berücksichtigt wie dies in der Firmware eingestellt ist)</li>
+				<li>Bei Klick auf einen freien Bereich der Karte werden die Koordinaten angezeigt</li>
+				<li>Es werden nun 25 Events pro Router angezeigt, die Reihenfolge wurde invertiert</li>
+				</ul>
+				<h3>&Auml;nderungen bis 20.12.2017</h3>
 				<ul style="font-size:18px">
 				<li>Router-Statistiken werden für 30 Tage erfasst</li>
 				<li>Benutzer können ihren eigenen Account selbst löschen</li>
@@ -30,7 +39,7 @@
 				<li>Router können per Schaltfläche an Administratoren gemeldet werden, falls rechtswidrige Texte hinterlegt sind</li>
 				<li>Router können permanent aus dem Monitoring verbannt werden</li>
 				</ul>
-				<h3>&Auml;nderungen am 10.12.2017</h3>
+				<h3>&Auml;nderungen bis 10.12.2017</h3>
 				<ul style="font-size:18px">
 				<li>Perma-Link auf Router-Detailseite</li>
 				<li>Router k&ouml;nnen anhand der MAC-Adresse ihrer Nachbarn gesucht werden: <span class="consolefont">neighbor:&lt;mac_of_neighbor&gt;</span></li>
@@ -39,13 +48,13 @@
 				<li>Bei Router-Reset wird ein Hinweis auf Detail- und Übersichtsseite angezeigt</li>
 				<li>Die Statistik-Seite wurde umgeordnet (Graphen jetzt rechts oben)</li>
 				</ul>
-				<h3>&Auml;nderungen am 17.11.2017</h3>
+				<h3>&Auml;nderungen bis 17.11.2017</h3>
 				<ul style="font-size:18px">
 				<li>Router-Status wird schneller aktualisiert: Anzeige nach 90 Sek. (bisher 5 Min.)</li>
 				<li>Statistik wird schneller aktualisiert: Anzeige nach 3 Min. (bisher 6 Min.)</li>
 				<li>Offline-Status wird schneller aktualisiert: Offline nach 18 Min. (bisher 26 Min.)</li>
 				</ul>
-				<h3>&Auml;nderungen am 16.11.2017</h3>
+				<h3>&Auml;nderungen bis 16.11.2017</h3>
 				<ul style="font-size:18px">
 				<li>Changelog wird eingeführt</li>
 				<li>MySQL-Unterstützung und reines Python3 (Mapnik, Tilestache)</li>
